added responsive signing

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -301,3 +301,15 @@ then applies the brand to it. <a target='_blank'
     API method used:
     <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>.
 </p>
+
+<h2>Responsive signing</h2>
+
+<h4 id="example038">38. <a href="eg038">Signable HTML document</a></h4>
+<p>
+    Demonstrates how to create an HTML document for responsive signing.
+<p>
+    API methods used:
+    <a target="_blank" href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopes/create/">Envelopes::create</a>,
+    <a target='_blank'
+    href="https://developers.docusign.com/docs/esign-rest-api/reference/envelopes/envelopeviews/createrecipient/">EnvelopeViews::createRecipient</a>.
+</p>
