fixed issue with quickstart redirect for Rooms API (#52)

--- a/views/pages/rooms-examples/eg002CreateRoomFromTemplate.ejs
+++ b/views/pages/rooms-examples/eg002CreateRoomFromTemplate.ejs
@@ -35,7 +35,7 @@
     <p>Problem: you don't have any templates. Please first create a form template using <a href="https://demo.rooms.docusign.com/admin/company/roomtemplates">Docusign Admin</a> <br/>
      Thank you.</p>
      
-  <form class="eg" action="eg002rooms" method="get">
+  <form class="eg" action="eg002" method="get">
       <button type="submit" class="btn btn-docu">Continue</button>
   </form>
   <% } %>
