--- a/views/pages/rooms-examples/eg005GetRoomsWithFilters.ejs
+++ b/views/pages/rooms-examples/eg005GetRoomsWithFilters.ejs
@@ -1,5 +1,5 @@
 <% include ../../partials/examplesHead %>
-<h4 id="example005">5. <a href="eg005rooms">Get filtered rooms.</a></h4>
+<h4 id="example005">5. <a href="eg005">Get filtered rooms.</a></h4>
 <p>This example returns rooms by filter.</p>
 
 <% include ../../partials/docBody %>
