--- a/views/pages/index_rooms_examples.ejs
+++ b/views/pages/index_rooms_examples.ejs
@@ -12,7 +12,7 @@
 <h3 class="mt-4">Rooms API Code Examples</h3>
 <% } %>
 
-<h4 id="example001">1. <a href="eg001rooms">Creates a new room from data.</a></h4>
+<h4 id="example001">1. <a href="eg001">Creates a new room from data.</a></h4>
 <p>This is a general example of creating a room.</p>
 <p>API methods used:
    <a target='_blank'
@@ -21,7 +21,7 @@
       href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/CreateRoom">Rooms::CreateRoom</a>.
 </p>
 
-<h4 id="example002">2. <a href="eg002rooms">Create a room from template.</a></h4>
+<h4 id="example002">2. <a href="eg002">Create a room from template.</a></h4>
 <p>Create a room from template.</p>
 <p>API methods used:
    <a target ='_blank' href="https://developers.docusign.com/rooms-api/reference/Roles/Roles/GetRoles">Roles::GetRoles</a> and
@@ -29,7 +29,7 @@
    <a target ='_blank' href="https://developers.docusign.com/rooms-api/reference/RoomTemplates/RoomTemplates/GetRoomTemplates">RoomTemplates::GetRoomTemplates</a>.
 </p>
 
-<h4 id="example003">3. <a href="eg003rooms">Export data from a room.</a></h4>
+<h4 id="example003">3. <a href="eg003">Export data from a room.</a></h4>
 <p>This example exports data from a room.</p>
 <p>API methods used:
    <a target='_blank'
@@ -38,7 +38,7 @@
       href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetRoomFieldData">Rooms::GetRoomFieldData</a>.
 </p>
 
-<h4 id="example004">4. <a href="eg004rooms">Add form to a room.</a></h4>
+<h4 id="example004">4. <a href="eg004">Add form to a room.</a></h4>
 <p>This example adds form to a room.</p>
 <p>API methods used:
     <a target='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetRooms">Rooms: GetRooms</a>,
@@ -47,13 +47,13 @@
     <a target='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/AddFormToRoom">Rooms: AddFormToRoom</a>.
 </p>
 
-<h4 id="example005">5. <a href="eg005rooms">Get filtered rooms.</a></h4>
+<h4 id="example005">5. <a href="eg005">Get filtered rooms.</a></h4>
 <p>This example returns rooms by filter.</p>
 <p>API methods used:
    <a target='_blank' href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetRooms">Rooms: GetRooms</a>.
 </p>
 
-<h4 id="example006">6. <a href="eg006rooms">Creates external form fill session.</a></h4>
+<h4 id="example006">6. <a href="eg006">Creates external form fill session.</a></h4>
 <p>This is an example of creating external form fill session.</p>
 <p>API methods used:
    <a target='_blank'
@@ -62,7 +62,7 @@
       href="https://developers.docusign.com/rooms-api/reference/Rooms/Rooms/GetDocuments">Rooms::GetDocuments</a>.
 </p>
 
-<h4 id="example007">7. <a href="eg007rooms">Creating a form group</a></h4>
+<h4 id="example007">7. <a href="eg007">Creating a form group</a></h4>
 <p>
     This example demonstrates how to create a form group.
 </p>
@@ -74,7 +74,7 @@
     </a>
 </p>
 
-<h4 id="example008">8. <a href="eg008rooms">Grant office access to a form group</a></h4>
+<h4 id="example008">8. <a href="eg008">Grant office access to a form group</a></h4>
 <p>
     This example demonstrates how to grant office access to a form group.
 </p>
@@ -85,7 +85,7 @@
     <a target ='_blank' href="https://developers.docusign.com/docs/rooms-api/reference/offices/offices/getoffices/">Offices::GetOffices</a>
 </p>
 
-<h4 id="example009">9. <a href="eg009rooms">Assign form to a form group</a></h4>
+<h4 id="example009">9. <a href="eg009">Assign form to a form group</a></h4>
 <p>
     This example demonstrates how to assign form to a form group.
 </p>
