--- a/views/pages/rooms-examples/eg006CreateExternalFormFillSession.ejs
+++ b/views/pages/rooms-examples/eg006CreateExternalFormFillSession.ejs
@@ -26,9 +26,9 @@
   <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 <% } else { %>
-  <p>Problem: Selected room does not have any documents. Please first add a form to a room using  <a href="eg004rooms">example 4</a></a> <br/>
+  <p>Problem: Selected room does not have any documents. Please first add a form to a room using  <a href="eg004">example 4</a></a> <br/>
    Thank you.</p>
-   <form class="eg" action="eg004rooms" method="get">
+   <form class="eg" action="eg004" method="get">
     <button type="submit" class="btn btn-docu">Continue</button>
   </form>
 <% } %>
