--- a/views/pages/rooms-examples/eg006SelectRoomForExternalFormFillSession.ejs
+++ b/views/pages/rooms-examples/eg006SelectRoomForExternalFormFillSession.ejs
@@ -24,10 +24,10 @@
   <button type="submit" class="btn btn-docu">Submit</button>
 </form>
 <% } else { %>
-  <p>Problem: please first create a room using <a href="eg001rooms">example 1.</a> <br/>
+  <p>Problem: please first create a room using <a href="eg001">example 1.</a> <br/>
    Thank you.</p>
    
-<form class="eg" action="eg001rooms" method="get">
+<form class="eg" action="eg001" method="get">
     <button type="submit" class="btn btn-docu">Continue</button>
 </form>
 <% } %>
