--- a/views/pages/rooms-examples/eg009AssignFormToFormGroup.ejs
+++ b/views/pages/rooms-examples/eg009AssignFormToFormGroup.ejs
@@ -33,7 +33,7 @@
         <input type="hidden" name="_csrf" value="<%- csrfToken %>">
         <button type="submit" class="btn btn-docu">Submit</button>
     <% } else { %>
-        <p>Problem: please first create a form_group using <a href="eg007rooms">example 7</a>
+        <p>Problem: please first create a form_group using <a href="eg007">example 7</a>
             </br>Thank you.</p>
     <% } %>
 </form>
