small fix to eSign38 title

--- a/views/pages/index_esignature_examples.ejs
+++ b/views/pages/index_esignature_examples.ejs
@@ -304,7 +304,7 @@ then applies the brand to it. <a target='_blank'
 
 <h2>Responsive signing</h2>
 
-<h4 id="example038">38. <a href="eg038">Signable HTML document</a></h4>
+<h4 id="example038">38. <a href="eg038">Create a signable HTML document</a></h4>
 <p>
     Demonstrates how to create an HTML document for responsive signing.
 <p>
