added eg006 and eg007 examples

--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -77,6 +77,22 @@
         href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">eSignUserManagement:getUserProfiles</a>
    </p>
 
+  <h4 id="example006">6. <a href="eg006">Get user profile by email</a></h4>
+  <p>
+    Demonstrates how to get user profile data by email.
+  </p>
+  <p>API method used:
+    UsersApi::getUserDSProfilesByEmail.
+  </p>
+
+  <h4 id="example007">7. <a href="eg007">Get user profile by user ID</a></h4>
+  <p>
+    Demonstrates how to get user profile data by user ID.
+  </p>
+  <p>API method used:
+    UsersApi::getUserDSProfile.
+  </p>
+
 </div>
 
 <!-- anchor-js is only for the index page -->
