--- a/views/pages/admin-examples/eg006GetUserProfileByEmail.ejs
+++ b/views/pages/admin-examples/eg006GetUserProfileByEmail.ejs
@@ -1,14 +1,14 @@
 <% include ../../partials/examplesHead %>
 
-<h4>6. Get user profile by email</h4>
+<h4>6. Retrieve the user's DocuSign profile using an email address</h4>
 <p>
-    Demonstrates how to get user profile data by email.
+  Demonstrates how to obtain the user’s DocuSign profile information across all DocuSign accounts by specifying the user’s email address.
 </p>
 
 <% include ../../partials/docBody %>
 
 <p>API method used:
-  UsersApi::getUserDSProfilesByEmail.
+  MultiProductUserManagement:getUserDSProfilesByEmail.
 </p>
 
 <% include ../../partials/gitSource %>
