--- a/views/pages/admin-examples/eg007GetUserProfileByUserId.ejs
+++ b/views/pages/admin-examples/eg007GetUserProfileByUserId.ejs
@@ -1,14 +1,14 @@
 <% include ../../partials/examplesHead %>
 
-<h4>7. Get user profile by user ID</h4>
+<h4>7. Retrieve the user's DocuSign profile using a User ID</h4>
 <p>
-  Demonstrates how to get user profile data by user ID.
+  Demonstrates how to obtain the user’s DocuSign profile information across all DocuSign accounts by specifying the user’s User ID.
 </p>
 
 <% include ../../partials/docBody %>
 
 <p>API method used:
-  UsersApi::getUserDSProfile.
+  MultiProductUserManagement:getUserDSProfile.
 </p>
 
 <% include ../../partials/gitSource %>
