--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -77,20 +77,20 @@
         href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">eSignUserManagement:getUserProfiles</a>
    </p>
 
-  <h4 id="example006">6. <a href="eg006">Get user profile by email</a></h4>
+  <h4 id="example006">6. <a href="eg006">Retrieve the user's DocuSign profile using an email address</a></h4>
   <p>
-    Demonstrates how to get user profile data by email.
+    Demonstrates how to obtain the user's DocuSign profile information across all DocuSign accounts by specifying the user's email address.
   </p>
   <p>API method used:
-    UsersApi::getUserDSProfilesByEmail.
+    MultiProductUserManagement:getUserDSProfilesByEmail
   </p>
 
-  <h4 id="example007">7. <a href="eg007">Get user profile by user ID</a></h4>
+  <h4 id="example007">7. <a href="eg007">Retrieve the user's DocuSign profile using a User ID</a></h4>
   <p>
-    Demonstrates how to get user profile data by user ID.
+    Demonstrates how to obtain the user's DocuSign profile information across all DocuSign accounts by specifying the user's User ID.
   </p>
   <p>API method used:
-    UsersApi::getUserDSProfile.
+    MultiProductUserManagement:getUserDSProfile
   </p>
 
 </div>
