add link, add 'address'

--- a/views/pages/admin-examples/eg006GetUserProfileByEmail.ejs
+++ b/views/pages/admin-examples/eg006GetUserProfileByEmail.ejs
@@ -8,14 +8,15 @@
 <% include ../../partials/docBody %>
 
 <p>API method used:
-  MultiProductUserManagement:getUserDSProfilesByEmail.
+   <a target="_blank" rel='noopener noreferrer' 
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">MultiProductUserManagement:getUserDSProfilesByEmail</a>.
 </p>
 
 <% include ../../partials/gitSource %>
 
 <form class="eg" action="" method="post" data-busy="form">
     <div class="form-group">
-      <label for="email">Email</label>
+      <label for="email">Email address</label>
       <input type="email" class="form-control" id="email" name="email"
              aria-describedby="emailHelp" placeholder="pat@example.com" required>
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
