--- a/views/pages/admin-examples/eg007GetUserProfileByUserId.ejs
+++ b/views/pages/admin-examples/eg007GetUserProfileByUserId.ejs
@@ -8,7 +8,8 @@
 <% include ../../partials/docBody %>
 
 <p>API method used:
-  MultiProductUserManagement:getUserDSProfile.
+   <a target="_blank" rel='noopener noreferrer' 
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">MultiProductUserManagement:getUserDSProfile</a>.
 </p>
 
 <% include ../../partials/gitSource %>
