--- a/views/pages/index_admin_examples.ejs
+++ b/views/pages/index_admin_examples.ejs
@@ -7,11 +7,6 @@
             a Node Express application.</p>
     <% } %>
 
-    <% if (locals.dsConfig.multiSourceChooser) { %>
-        <h3 class="mt-4">Admin API Code Examples for Bash, C#, Java, Node.js, PHP, PowerShell, Python, and Ruby</h3>
-    <% } else { %>
-        <h3 class="mt-4">Admin API Code Examples</h3>
-    <% } %>
 
     <h4 id="example001">1. <a href="eg001">Create a new active eSignature user</a></h4>
     <p>
@@ -82,7 +77,8 @@
     Demonstrates how to obtain the user's DocuSign profile information across all DocuSign accounts by specifying the user's email address.
   </p>
   <p>API method used:
-    MultiProductUserManagement:getUserDSProfilesByEmail
+     <a target="_blank" rel='noopener noreferrer' 
+        href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">MultiProductUserManagement:getUserDSProfilesByEmail</a>
   </p>
 
   <h4 id="example007">7. <a href="eg007">Retrieve the user's DocuSign profile using a User ID</a></h4>
@@ -90,7 +86,8 @@
     Demonstrates how to obtain the user's DocuSign profile information across all DocuSign accounts by specifying the user's User ID.
   </p>
   <p>API method used:
-    MultiProductUserManagement:getUserDSProfile
+     <a target="_blank" rel='noopener noreferrer' 
+            href="https://developers.docusign.com/docs/admin-api/reference/usermanagement/esignusermanagement/getuserprofiles/">MultiProductUserManagement:getUserDSProfile</a>
   </p>
 
 </div>
